admin dashboard: fix label underline gap

--- a/admin/public/styles/keystone/dashboard.less
+++ b/admin/public/styles/keystone/dashboard.less
@@ -143,10 +143,11 @@
 	display: inline-block;
 	font-size: 1.25em;
 	font-weight: 500;
-	padding-bottom: .25em; // prevent decenders being cropped
+	padding-bottom: .05em; // prevent decenders being cropped
+	margin-bottom: .2em;
 }
 .dashboard-group__list-count {
-	padding-bottom: .25em; // prevent decenders being cropped
+	padding-bottom: .2em;
 }
 
 
